# insights_demo

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  app_main.c  insights_auth_key.txt
main/insights_console/: CMakeLists.txt
main/insights_console/include/: esp_insights_console.h
main/insights_console/src/: insights_console_cmds.c
